# qstm-backend

./: --db.sqlite3  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
qstm/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
qstm/migrations/: 0001_initial.py  0002_auto_20200713_1814.py  0003_auto_20200713_1819.py  0004_auto_20200713_1820.py  0005_auto_20200713_1821.py  0006_auto_20200713_1828.py  0007_auto_20200713_1833.py  0008_auto_20200713_1849.py  0009_auto_20200713_1850.py  0010_auto_20200713_2008.py  0011_auto_20200714_0411.py
task_manager_api_project/: asgi.py  settings.py  urls.py  wsgi.py
